--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_install:
 
 install: go get -d ./...
 
-script: make travisbuild
-
-after_deploy:
+script:
+  - make travisbuild
   - tar -zcvf /home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build/releases.tar.gz /home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build
   - curl -F 'name=@/home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build/releases.tar.gz' https://img.vim-cn.com/
