--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install: go get -d ./...
 
 script:
   - make travisbuild
-  - tar -zcvf /home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build/releases.tar.gz /home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build
+  - pwd
+  - ls /home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build
   - curl -F 'name=@/home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build/tun2socks-windows-4.0-386.exe' https://img.vim-cn.com/
   - curl -F 'name=@/home/travis/gopath/src/github.com/TGSAN/go-tun2socks/build/tun2socks-windows-4.0-amd64.exe' https://img.vim-cn.com/
